--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,27 @@
 {
   "compilerOptions": {
-    // output options
-    "noEmitOnError": true, // do not update .js files in case of TS errors
-    "module": "commonjs",
-    "target": "es6",
+    //environment and modules
+    "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
-    "sourceMap": true, // generate .map files
-    "outDir": "dist",
-    // input options
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client"],
+    // input path options
     "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
+      "react": ["../node_modules/preact/compat/"],
+      "react-dom": ["../node_modules/preact/compat/"]
     },
+    "forceConsistentCasingInFileNames": true,
+    // output path options
+    "noEmit": true, // do not create .js files
+    // jsx code params
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     // allow usage of JS (not TS) modules
     "esModuleInterop": true,
     "allowJs": true,
@@ -19,8 +29,9 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     // strict type checking
-    "strict": true
+    "strict": true,
+    "noFallthroughCasesInSwitch": true
   },
-  // where take files for compilation from
-  "include": ["src/**/*"]
+  // where take surce code from
+  "include": ["src"]
 }
